[package]
authors = ["nephtys <christopher.kaag@gmail.com>"]
name = "rustix-bl"
version = "0.4.1"



# A short blurb about the package. This is not rendered in any format when
# uploaded to crates.io (aka this is not markdown).
description = "Backend for cervisia application"

# These URLs point to more information about the repository. These are
# intended to be webviews of the relevant data, not necessarily compatible
# with VCS tools and the like.
repository = "https://github.com/n3phtys/rustix-bl"


# This is a string description of the license for this package. Currently
# crates.io will validate the license provided against a whitelist of known
# license identifiers from http://spdx.org/licenses/. Multiple licenses can be
# separated with a `/`.
license = "MIT"



[dependencies]
suffix-rs = "0.1.0"
bincode = "0.8.0"
custom_derive = "0.1.7"
derive_builder = "0.5.0"
lmdb = "0.7.1"
quick-error = "1.2.0"
rand = "0.3.16"
serde = "1.0.11"
serde_derive = "1.0.11"
serde_json = "1.0.2"
tempdir = "0.3.5"
typescriptify-derive = "0.1"
typescriptify = "0.1"
